webgpu/webgpu.odin


    @(link_name = "wgpuRenderPassEncoderSetVertexBuffer")
    render_pass_encoder_set_vertex_buffer :: proc(render_pass_encoder: RenderPassEncoder, slot: u32, buffer: Buffer, offset: u64, size: u64) ---

    @(link_name = "wgpuRenderPassEncoderSetViewport")
    render_pass_encoder_set_viewport :: proc(render_pass_encoder: RenderPassEncoder, x: _c.float, y: _c.float, width: _c.float, height: _c.float, min_depth: _c.float, max_depth: _c.float) ---

    @(link_name = "wgpuRenderPassEncoderReference")
    render_pass_encoder_reference :: proc(render_pass_encoder: RenderPassEncoder) ---

    @(link_name = "wgpuRenderPassEncoderRelease")
    render_pass_encoder_release :: proc(render_pass_encoder: RenderPassEncoder) ---

    @(link_name = "wgpuRenderPipelineGetBindGroupLayout")
    render_pipeline_get_bind_group_layout :: proc(render_pipeline: RenderPipeline, group_index: u32) -> BindGroupLayout ---

    @(link_name = "wgpuRenderPipelineSetLabel")
    render_pipeline_set_label :: proc(render_pipeline: RenderPipeline, label: cstring) ---

    @(link_name = "wgpuRenderPipelineReference")
    render_pipeline_reference :: proc(render_pipeline: RenderPipeline) ---

    @(link_name = "wgpuRenderPipelineRelease")
    render_pipeline_release :: proc(render_pipeline: RenderPipeline) ---

    @(link_name = "wgpuSamplerSetLabel")
    sampler_set_label :: proc(sampler: Sampler, label: cstring) ---

    @(link_name = "wgpuSamplerReference")
    sampler_reference :: proc(sampler: Sampler) ---

    @(link_name = "wgpuSamplerRelease")
    sampler_release :: proc(sampler: Sampler) ---

    @(link_name = "wgpuShaderModuleGetCompilationInfo")
    shader_module_get_compilation_info :: proc(shader_module: ShaderModule, callback: CompilationInfoCallback, userdata: rawptr) ---

    @(link_name = "wgpuShaderModuleSetLabel")
    shader_module_set_label :: proc(shader_module: ShaderModule, label: cstring) ---

    @(link_name = "wgpuShaderModuleReference")
    shader_module_reference :: proc(shader_module: ShaderModule) ---

    @(link_name = "wgpuShaderModuleRelease")
    shader_module_release :: proc(shader_module: ShaderModule) ---

    @(link_name = "wgpuSurfaceGetPreferredFormat")
    surface_get_preferred_format :: proc(surface: Surface, adapter: Adapter) -> TextureFormat ---

    @(link_name = "wgpuSurfaceReference")
    surface_reference :: proc(surface: Surface) ---

    @(link_name = "wgpuSurfaceRelease")
    surface_release :: proc(surface: Surface) ---

    @(link_name = "wgpuSwapChainGetCurrentTextureView")
    swap_chain_get_current_texture_view :: proc(swap_chain: SwapChain) -> TextureView ---

    @(link_name = "wgpuSwapChainPresent")
    swap_chain_present :: proc(swap_chain: SwapChain) ---

    @(link_name = "wgpuSwapChainReference")
    swap_chain_reference :: proc(swap_chain: SwapChain) ---

    @(link_name = "wgpuSwapChainRelease")
    swap_chain_release :: proc(swap_chain: SwapChain) ---

    @(link_name = "wgpuTextureCreateView")
    texture_create_view :: proc(texture: Texture, #by_ptr descriptor: TextureViewDescriptor) -> TextureView ---

    @(link_name = "wgpuTextureDestroy")
    texture_destroy :: proc(texture: Texture) ---

    @(link_name = "wgpuTextureGetDepthOrArrayLayers")
    texture_get_depth_or_array_layers :: proc(texture: Texture) -> u32 ---

    @(link_name = "wgpuTextureGetDimension")
    texture_get_dimension :: proc(texture: Texture) -> TextureDimension ---

    @(link_name = "wgpuTextureGetFormat")
    texture_get_format :: proc(texture: Texture) -> TextureFormat ---

    @(link_name = "wgpuTextureGetHeight")
    texture_get_height :: proc(texture: Texture) -> u32 ---

    @(link_name = "wgpuTextureGetMipLevelCount")
    texture_get_mip_level_count :: proc(texture: Texture) -> u32 ---

    @(link_name = "wgpuTextureGetSampleCount")
    texture_get_sample_count :: proc(texture: Texture) -> u32 ---

    @(link_name = "wgpuTextureGetUsage")
    texture_get_usage :: proc(texture: Texture) -> u32 ---

    @(link_name = "wgpuTextureGetWidth")
    texture_get_width :: proc(texture: Texture) -> u32 ---

    @(link_name = "wgpuTextureSetLabel")
    texture_set_label :: proc(texture: Texture, label: cstring) ---

    @(link_name = "wgpuTextureReference")
    texture_reference :: proc(texture: Texture) ---

    @(link_name = "wgpuTextureRelease")
    texture_release :: proc(texture: Texture) ---

    @(link_name = "wgpuTextureViewSetLabel")
    texture_view_set_label :: proc(texture_view: TextureView, label: cstring) ---

    @(link_name = "wgpuTextureViewReference")
    texture_view_reference :: proc(texture_view: TextureView) ---

    @(link_name = "wgpuTextureViewRelease")
    texture_view_release :: proc(texture_view: TextureView) ---

}
when WGPU_NATIVE {
    @(default_calling_convention = "c")
    foreign wgpu {
        @(link_name = "wgpuGenerateReport")
        generate_report :: proc(instance: Instance, report: ^GlobalReport) ---

        @(link_name = "wgpuDevicePoll")
        device_poll :: proc(device: Device, wait: bool, #by_ptr wrapped_submission_index: WrappedSubmissionIndex) -> bool ---

        @(link_name = "wgpuSetLogCallback")
        set_log_callback :: proc(callback: LogCallback, userdata: rawptr) ---

        @(link_name = "wgpuSetLogLevel")
        set_log_level :: proc(level: LogLevel) ---

        @(link_name = "wgpuGetVersion")
        get_version :: proc() -> u32 ---

        @(link_name = "wgpuRenderPassEncoderSetPushConstants")
        render_pass_encoder_set_push_constants :: proc(encoder: RenderPassEncoder, stages: u32, offset: u32, size_bytes: u32, data: rawptr) ---

        @(link_name = "wgpuRenderPassEncoderMultiDrawIndirect")
        render_pass_encoder_multi_draw_indirect :: proc(encoder: RenderPassEncoder, buffer: Buffer, offset: u64, count: u32) ---

        @(link_name = "wgpuRenderPassEncoderMultiDrawIndexedIndirect")
        render_pass_encoder_multi_draw_indexed_indirect :: proc(encoder: RenderPassEncoder, buffer: Buffer, offset: u64, count: u32) ---

        @(link_name = "wgpuRenderPassEncoderMultiDrawIndirectCount")
        render_pass_encoder_multi_draw_indirect_count :: proc(encoder: RenderPassEncoder, buffer: Buffer, offset: u64, count_buffer: Buffer, count_buffer_offset: u64, max_count: u32) ---

        @(link_name = "wgpuRenderPassEncoderMultiDrawIndexedIndirectCount")
        render_pass_encoder_multi_draw_indexed_indirect_count :: proc(encoder: RenderPassEncoder, buffer: Buffer, offset: u64, count_buffer: Buffer, count_buffer_offset: u64, max_count: u32) ---
    }
}
